tests/test_compile/cases/catch_all_multiple.stderr
error: DekuRead: `default` must be specified only once
  --> tests/test_compile/cases/catch_all_multiple.rs:10:5
   |
10 |     B = 2,
   |     ^
